ClimbSubsystem Removal
I removed all the climb code